--- a/style.css
+++ b/style.css
@@ -49,9 +49,9 @@ nav .logo23 {
 }
 .info > .btn5 {
   width: 125px;
-  height: 20px;
-  padding: 40px;
-  background-color: black;
+  height: 10px;
+
+  background-color: #f5204b;
 }
 .btn5 > .btn4 {
 }
